RESOLVED FIXED75058
DFG ConvertThis optimizations do not honor the distinction between the global object and the global this object
https://bugs.webkit.org/show_bug.cgi?id=75058
Summary DFG ConvertThis optimizations do not honor the distinction between the global...
Filip Pizlo
Reported 2011-12-21 17:49:03 PST
Patch forthcoming.
Attachments
the patch (93.92 KB, patch)
2011-12-21 18:17 PST, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2011-12-21 17:49:19 PST
Filip Pizlo
Comment 2 2011-12-21 18:17:57 PST
Created attachment 120252 [details] the patch
Filip Pizlo
Comment 3 2011-12-21 18:24:34 PST
Note You need to log in before you can comment on or make changes to this bug.