Source/JavaScriptCore/dfg/DFGAssemblyHelpers.h
@@ -268,6 +268,12 @@ public:
         return codeBlock()->globalObjectFor(codeOrigin);
     }
     
+    JSObject* globalThisObjectFor(CodeOrigin codeOrigin)
+    {
+        JSGlobalObject* object = globalObjectFor(codeOrigin);
+        return object->methodTable()->toThisObject(object, 0);
+    }
+    
     bool strictModeFor(CodeOrigin codeOrigin)
     {
         if (!codeOrigin.inlineCallFrame)
